feat: Add upscale API and its docs and example
